# rucio-ops

./: .env.template  .gitignore  foobar_seal_mayank  pyproject.toml  requirements.txt  rucio_test.py  seal_s3_client.py  transfer_plots.py
automouse/: convert.py  play.py  record.py  recording.json
checksum_mismatch/: agent.py  checksum.csv  main.py  models.py  replicas.csv  rucio_download_and_checksum.sh  transfer_details_23_feb_csv_needs_seal_checksum.csv  transfer_details_23_feb_csv_needs_seal_checksum_webui.csv  transfer_details_23_feb_csv_with_did_and_checksum_and_fts_unique.csv  transfer_details_23_feb_csv_with_did_and_checksum_unique.csv  transfer_details_23_feb_csv_with_did_unique.csv  transfer_details_23_feb_csv_with_rse.csv  transfer_details_23_feb_status.csv  utils.py
checksum_mismatch/automouse/: README.md
consistency_checks/: 01_manual_auditor.ipynb  02_checksum_verification.ipynb  checksum_verification.ipynb  manual_auditor.ipynb
consistency_checks/core/: entity.py
consistency_checks/infrastructure/gateway/: replica-gateway.py
consistency_checks/reports/: 20220101-20220801_checksum_verification.html  20220101-20230410_01_manual_auditor.html  20220101-20230410_monthly_consistency_report.html  20220101-20230410_monthly_stats_by_number_of_dids.html
rucio/etc/: rucio.cfg
src/core/: entity.py  utils.py
src/core/dto/: replica.py
src/reports/: 2022-01-01_2023-04-10_monthly_consistency_report.html  2022-08-01 00:00:00-2023-01-01 00:00:00_monthly_checksum_verification.html  20220101-20230410_monthly_stats_by_volume_report.html
(+4 files in other folders)
