[tool.poetry]
name = "monit-analyzer"
version = "0.1.0"
description = "Analyse Data from MONIT Dashboards"
authors = ["maany <imptodefeat@gmail.com>"]
readme = "README.md"
packages = [{include = "monit_analyzer"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.1"
colorlog = "^6.8.2"
pydantic = "^2.6.1"
pytest-playwright = "^0.4.4"
pytest = "^8.0.1"
requests = "^2.31.0"
pyautogui = "^0.9.54"
pyperclip = "^1.8.2"
tqdm = "^4.66.2"
nbconvert = "^7.16.3"
matplotlib = "^3.8.4"
ipynb = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
